--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "html2canvas": "^1.0.0-alpha.12",
     "lib-flexible": "^0.3.2",
     "postcss-px2rem": "^0.3.0",
